# crypto-scanner-agent

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  Secrets.toml.example  Shuttle.toml  deploy.sh  format.sh  lint.sh  raydium-top-tracker.ts  raydium_top_pools.json  run.sh  todo.md  top_pools.json
.github/workflows/: ci.yml
src/: lib.rs  main.rs  solana.rs  stream.rs  ws.rs
static/: index.html
tasks/: simple_tasks.md
tests/: parallel.rs  parallel_rstest.rs  util.rs  version.rs
