[package]
name = "crypto-scanner-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
shuttle-axum = { version = "0.54.0", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.54.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
raydium-sdk-V2 = "0.0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
rig-core = "0.12.0"
schemars = "0.8"
anyhow = "1"
thiserror = "1"
num_cpus = "1"


[dev-dependencies]
rstest = "0.18"

